--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ node_js:
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.13.0
   - export PATH="$HOME/.yarn/bin:$PATH"
+
+script:
+  - "yarn build"
