--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - export PATH="$HOME/.yarn/bin:$PATH"
 
 script:
-  - "yarn build"
+  - "yarn build-for-gh"
 
 deploy:
   provider: pages
