--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "start": "parcel serve index.html",
+    "build-for-gh": "parcel build index.html --public-url=art-gen",
     "build": "parcel build index.html"
   },
   "dependencies": {
